# newsletter-podcast-public

./: .gitignore  Caddyfile.example  LICENSE  Makefile  README.md  config.example.yaml  eval_manifest.sample.csv  pyproject.toml
docs/: whisper_wer_eval.md
eval/: normalisation.py
eval/source_profiles/: Bloomberg.md  Guardian.md  MIT Technology Review.md  The Atlantic.md  WIRED.md
examples/synthetic/: manifest.csv
examples/synthetic/eval_results/: details.jsonl  results.csv  summary_by_source.csv
examples/synthetic/eval_results/selected_references/: sample_001.txt
examples/synthetic/eval_results/transcripts/: sample_001.txt  sample_002.txt
examples/synthetic/source_texts/: sample_002.txt
src/newsletter_podcast/: article_fetch.py  article_store.py  clean.py  config.py  feed.py  fetch.py  pipeline.py  synthesize.py  synthesize_worker.py  weekly.py
systemd/: newsletter-podcast.service  newsletter-podcast.timer
tests/: test_article_store.py  test_clean.py  test_eval_whisper_wer.py  test_synthesize.py  test_weekly.py
tests/fixtures/: beehiiv.html  mailchimp.html  substack.html
tools/: eval_whisper_wer.py
